# jai

./: .env.development  .gitignore  AGENTS.md  ARCHITECTURE_ANALYSIS_REPORT.md  COPY_LARGE_FILES.md  GITHUB_PUSH_GUIDE.md  HYBRID_DEVELOPMENT.md  JAI_SETUP_GUIDE.md  MODELS.md  OPTIMIZATION_AND_DEBUG_PLAN.md  PHASE_5_USAGE_GUIDE.md  PROJECT_COMPLETION_SUMMARY.md  QUICK_REFERENCE.md  README.md  TDD-auto-session-title.md  copy-large-files.sh  dev-backend.sh  dev-frontend.sh  dev-setup.sh  dev-utils.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: --  .dockerignore  .env.example  .env.normalized  .geminiignore  .gitignore  .pre-commit-config.yaml  1,  CHANGELOG.md  COMPLEX_QUERY_TEST_RESULTS.md  DEPLOYMENT_EXECUTION.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_READY.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  DEV_STARTUP.md  Dockerfile  FINAL_SUMMARY.txt  FIX_v0.20.2_MODEL_CONFIGURATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN_INTEGRATED.md  IMPLEMENTATION_STATUS_2026-03-22.md  NBA_FUNCTIONAL_TEST_RESULTS.md  NBA_REALWORLD_EXECUTION_COMPLETE.md  NBA_ROUTING_FIX_COMPLETE.md  PHASE_F_DEPLOYMENT_COMPLETE.md  PROJECT_MEMORY.md  PROJECT_STATUS.md  PROJECT_STATUS_SUMMARY.txt  README.md  README_DEPLOYMENT.md  READY_FOR_DEPLOYMENT.txt  RECENT_CHANGES.md  SESSION_COMPLETION_SUMMARY.md  START_HERE.md  SYSTEM_RUNNING.md  TEAM_BRIEFING.md  VERIFICATION_COMPLETE_v0.20.2.md  benchmark_advanced.json  benchmark_llm_stacks.json  (+25 more)
backend/.agent/workflows/: dev-startup.md  docker-dev.md
backend/.github/workflows/: ci.yml
backend/.hypothesis/constants/: 0009a9c9a59274e4  002dc3d86b5b0875  0035e3860f42f4ac  02ca81985f988ec4  047e3d3a97199b59  075d69961ed6df27  08871fc05d988566  08b26d630c6dac29  0b95618075521489  0dc401e47288b58f  0f54b1e64a75d8da  0fdab60fa4ca4b31  102cc9d53ae51b4f  11875fe1aea9e86f  12602b0580c691ff  132b520ed3acccd4  1372d9eec0c8fff2  13e76608325097a2  143cec6a2c5cdefd  15ad144e13ef8468  15f7237be0a43808  16be2540a9d77b71  175876623b6225da  1b464fe71714f5d7  1c2326f8f6390821  1c93d4220d7a8ba7  1ce1858782db37fd  1ea91fbbb87b4109  2074c4feee437d9e  209a49bab511e389  2238b85f68aa63e2  2649d58d983ded9c  26819345d4f9d00b  269cd3e3be42cd40  2833f19b3ea52f6c  2a0a75ccc75dc531  2aa9510fbf5ab99a  2d771aaf98f6cca2  2d9a085ae33bc74b  2dd21ba0d79fa1cd  (+157 more)
backend/.kilo/: agent-manager.json
backend/.kilo/plans/: OVERFLOW_STRATEGY_FIX_PLAN.md  PROVIDER_PREFIX_FIX_PLAN.md  SETTINGS_PANEL_UX_IMPROVEMENTS_PLAN.md
backend/.workflow/: PHASE_4_STATE.md
backend/config/: tool_hierarchy.yaml
backend/config/prompt_hints/: common.yaml
backend/docker/: .env.example  .env.geekcom.bak  docker-compose.dev.yml  docker-compose.geekcom.dev.yml  docker-compose.geekcom.yml  docker-compose.yml
backend/docker/prometheus/: prometheus.yml
backend/docs/: DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_REALWORLD.md  DEPLOYMENT_SUMMARY.md  ERROR_HANDLING.md  EXAMPLES.md  GRADUAL_ROLLOUT.md  INTEGRATIONS.md  LM_STUDIO_CONTEXT_LENGTH.md  MIGRATION_GUIDE.md  MONITORING.md  PERFORMANCE.md  PERFORMANCE_OPTIMIZATION.md  PHASE3_COMPLETION.md  PHASE4_COMPLETION.md  REALWORLD_TEST_PLAN.md  RUNBOOK.md  TIMEOUT_CONFIGURATION.md  unified-intent-analysis.md
backend/docs/api/: DOMAIN_HANDLERS_SDK.md  TOOLS_API.md  TOOL_CALLING_ENGINE.md  WORKING_MEMORY_API.md  unified-intent-analyzer.md
backend/docs/architecture/: API_CATALOG.md  DEPLOYMENT_GEEKCOM_PLAN.md  api_store_implementation_plan.md  blueprint_me4brain_v1.md  blueprint_me4brain_v2.md  implementation_plan_v1.md
backend/docs/protocolli/: graphrag_prompt_authoring.md  llm_prompt_generator.md
backend/docs/reports/: ARCHITECTURE_ANALYSIS_GATEWAY_VS_BACKEND.md  DIAGNOSTIC_REPORT_2026-02-18.md  NBA_HYBRID_ROUTING_DEEP_DEBUG_PLAN_2026-03-22.md  PERSAN_FRONTEND_BUG_REPORT.md
backend/docs/testing/: domain_test_plan.md
backend/me4brain-sdk/: README.md  pyproject.toml
backend/me4brain-sdk/docs/: DEVELOPER_GUIDE.md
backend/me4brain-sdk/tests/: conftest.py
backend/plans/: LLM_CONTEXT_OPTIMIZATION_PLAN.md  PERSAN_FRONTEND_IMPLEMENTATION_PLAN.md  PERSAN_FRONTEND_IMPLEMENTATION_PLAN_V2_HYBRID.md  PERSAN_ME4BRAIN_FIX_PLAN.md
backend/scripts/: backup_qdrant_collections.py  batch_ingest_apis.py  benchmark_advanced.py  benchmark_api.py  benchmark_llm_stack.py  benchmark_llm_stacks.py  benchmark_mistral_ab.py  deploy_unified_intent.sh  dev.sh  diag_llm.py  diag_llm_json.py  docker-control.sh  docker-maintenance.sh  download_embeddings.py  extract_pdf.py  generate_pydantic_schemas.py  generate_tool_schemas.py  google_oauth_setup.py  harvest_api_keys.py  index_capabilities.py  index_tools_qdrant.py  inventory_skills.py  massive_openapi_ingest.py  migrate_to_unified_collection.py  monitor_intent.py  register_all_apis.py  register_google_workspace.py  register_user_apis.py  reindex_tools_deprecated.py  scaffold_manual_domains.py  seed_graphrag_unified.py  seed_manual_templates.py  seed_manual_templates_standalone.py  setup-docker-cron.sh  setup_test_data.py  start.sh  start_all_dev.sh  start_dev.sh  stop.sh  sync_tools_qdrant_deprecated.py  (+33 more)
backend/sdk/: README.md  pyproject.toml
backend/src/: test_httpx.py  test_ollama.py
backend/src/me4brain/: __init__.py
backend/tests/: conftest.py  test_browser_tools.py  test_guardrail.py  test_hitl_flow.py
backend/tests/benchmarks/: golden_set.py  test_golden_set.py
backend/tests/domains/: test_adaptive_guardrails.py  test_adaptive_guardrails_integration.py  test_universal_guardrails.py
frontend/: .env.example  .gitignore  CHANGELOG.md  DEBUG_SUMMARY.md  README.md  RECENT_CHANGES.md  package.json  persan.sh  pyproject.toml  tsconfig.base.json  turbo.json
frontend/_legacy/: README.md
frontend/docker/: .env.geekcom  Dockerfile.frontend  Dockerfile.gateway  Dockerfile.gateway.prebuilt  docker-compose.gateway.yml
frontend/docs/: channels.md
frontend/frontend/: .env.development  .env.production  Dockerfile.frontend  eslint.config.js  next.config.js  package.json  tailwind.config.js
frontend/scripts/: start.sh  start_dev.sh  stop.sh  telegram-health-check.sh
(+654 files in other folders)
