[project]
name = "persan"
version = "0.1.0"
description = "PersAn - AI Chatbot universale powered by Me4BrAIn"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-multipart>=0.0.18",
    "sse-starlette>=2.2.0",
    "httpx>=0.28.0",
    "me4brain-sdk",
    # Proactive Agent System
    "apscheduler>=3.10.0",
    "structlog>=25.0.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.9.0",
]

[tool.uv.sources]
me4brain-sdk = { path = "../me4brain/sdk", editable = true }


[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
